--- a/app/views/admin/purchases/index.html.haml
+++ b/app/views/admin/purchases/index.html.haml
@@ -6,5 +6,7 @@
    %td= item.u_name
    %td= item.u_mail
    %td= item.u_phone
+   %td= item.address || "//---//"
+   %td= item.comment || "//---//"
    %td= I18n.l item.created_at
 
