--- a/app/views/main/_mordolenta.html.haml
+++ b/app/views/main/_mordolenta.html.haml
@@ -1,17 +1,12 @@
 .lenta{:style=>"width:636px;height:102px;vertical-align:center;margin-top:19px;margin-bottom:1px;margin-left:19px;margin-right:1px;"}
- %ul{:style=>"width:600px;"}
-  - @m_items.each do |mord|
-   %li{:style=>"display:inline-block;width:100px;height:100px;"}= link_to image_tag(mord.cover(:mord), :style=>"padding:2px;border:0px none;", :alt=>mord.name, :title=>mord.name), product_path(mord.id), :style=>"border:0px;border-style:none;"
+ .mordoitems{:style=>"width:600px;"}
+  %ul
+   - @m_items.each do |mord|
+    %li{:style=>"display:inline-block;width:100px;height:100px;"}= link_to image_tag(mord.cover(:mord), :style=>"padding:2px;border:0px none;", :alt=>mord.name, :title=>mord.name), product_path(mord.id), :style=>"border:0px;border-style:none;"
 %script{:type=>"text/javascript"}
  jQuery(document).ready(function() {
- jQuery('div.lenta').jcarousel({
+ jQuery('div.mordoitems').jcarousel({
  size:#{@m_items.size}, scroll:1,auto:5, itemFallbackDimension:96
  });
- });
--#%script{:type=>"text/javascript"}
- $(function(){
- $("div.lenta").jcarousel({size:#{@m_items.size}, scroll:1,auto:5});
- //, wrap:"circular"
- //$("div.lenta").jcarousel({loop:true,dispItems:2,autoSlide:true,autoSlideInterval:1000,nextBtn:"",prevBtn:"",animSpeed:"slow"});
  });
 
