--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,10 @@
       %table{:style=>"height:248px;width:1008px;cell-spacing:0px;cell-padding:0px;border:0px;border-spacing:0px;background:left top no-repeat url(#{image_path('up-background.jpg')});"}
        %tr
         %td{:style=>"width:*;vertical-align:bottom;padding-bottom:24px;"}
-         = form_for :search, :url=>'/search', :html=>{:method=>:get, :style=>""} do |f|
+         = form_for :search, :url=>'/search', :html=>{:method=>:get, :style=>"display:inline-block;"} do |f|
           = f.text_field :q, :class=>"search"
+         %div{:align=>"right", :style=>"width:350px;display:inline-block;"}
+          = link_to image_tag('http://www.mammon.ru/pic/ban88x31_2.gif', :width=>"88px", :height=>"31px", :style=>"border:0px none;"), "http://www.mammon.ru", :style=>"border:0px;border-style:none;"
         %td{:style=>"width:319px"}
          %ul.umenu{:style=>"list-style-type:none;"}
           %li= link_to "На главную", root_path, :class=>'umenu'
