--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,10 +12,10 @@
      %td{:colspan=>3}
       %table{:style=>"height:248px;width:1008px;cell-spacing:0px;cell-padding:0px;border:0px;border-spacing:0px;background:left top no-repeat url(#{image_path('up-background.jpg')});"}
        %tr
-        %td{:style=>"width:*;vertical-align:bottom;padding-bottom:24px;"}
-         = form_for :search, :url=>'/search', :html=>{:method=>:get, :style=>"display:inline-block;"} do |f|
+        %td{:"vert-align"=>"bottom", :style=>"width:*;vertical-align:bottom;padding-bottom:24px;"}
+         = form_for :search, :url=>'/search', :html=>{:method=>:get, :style=>"vertical-align:bottom;display:inline-block;"} do |f|
           = f.text_field :q, :class=>"search"
-         %div{:align=>"right", :"vert-align"=>"top", :style=>"width:480px;height:60px;display:inline-block;"}
+         %div{:align=>"right", :"vert-align"=>"top", :style=>"width:480px;height:60px;display:inline-block;vertical-align:bottom;"}
           = link_to image_tag('http://www.mammon.ru/pic/ban88x31_2.gif', :width=>"88px", :height=>"31px", :style=>"border:0px none;"), "http://www.mammon.ru", :style=>"border:0px;border-style:none;"
         %td{:style=>"width:319px"}
          %ul.umenu{:style=>"list-style-type:none;"}
