--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,9 +1,9 @@
-%h2 Resend confirmation instructions
+%h2 Выслать инструкции подтвеерждения
 = form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
   %p
-    = f.label :email
+    = f.label :email, "На e-mail"
     %br/
     = f.text_field :email
-  %p= f.submit "Resend confirmation instructions"
+  %p= f.submit "Выслать"
 = render :partial => "devise/shared/links"
