--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,9 @@
-%h2 Forgot your password?
+%h2 Забыли пароль?
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
   %p
-    = f.label :email
+    = f.label :email, "e-mail"
     %br/
     = f.text_field :email
-  %p= f.submit "Send me reset password instructions"
+  %p= f.submit "Послать мне инструкции по смене пароля"
 = render :partial => "devise/shared/links"
