--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,31 @@
 %h2
-  Edit #{resource_name.to_s.humanize}
+  Редактирование #{resource_name.to_s.humanize}
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = devise_error_messages!
   %p
-    = f.label :username
+    = f.label :username, "Логин"
     %br/
     = f.text_field :username
   %p
-    = f.label :email
+    = f.label :email, "e-mail"
     %br/
     = f.text_field :email
   %p
-    = f.label :password
+    = f.label :password, "Пароль"
     %i (leave blank if you don't want to change it)
     %br/
     = f.password_field :password
   %p
-    = f.label :password_confirmation
+    = f.label :password_confirmation, "Подтверждение пароля"
     %br/
     = f.password_field :password_confirmation
   %p
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
+    = f.label :current_password, "Текущий пароль"
+    %i (для подтверждения прав на изменение пароля необходимо ввести текущий пароль)
     %br/
     = f.password_field :current_password
-  %p= f.submit "Update"
-%h3 Cancel my account
-%p
+  %p= f.submit "Сохранить"
+-#%h3 Cancel my account
+-#%p
   Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
-= link_to "Back", :back
+= link_to "Назад", :back
