--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,20 +2,20 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
   %p
-    = f.label :username
+    = f.label :username, "Логин"
     %br/
     = f.text_field :username
   %p
-    = f.label :email
+    = f.label :email, "e-mail"
     %br/
     = f.text_field :email
   %p
-    = f.label :password
+    = f.label :password, "Пароль"
     %br/
     = f.password_field :password
   %p
-    = f.label :password_confirmation
+    = f.label :password_confirmation, "Подтверждение пароля"
     %br/
     = f.password_field :password_confirmation
-  %p= f.submit "Sign up"
+  %p= f.submit "Зарегистрировать"
 = render :partial => "devise/shared/links"
