--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,7 +56,7 @@
      %td{:style=>"width:120px;border-bottom:black solid 1px;"}
     %tr
      %td{:style=>"border-right:black solid 1px;height:20px;margin-right:5px;"} &nbsp;
-     %td{:style=>"height:20px;background-color:white;"} &nbsp;
+     %td{:style=>"height:20px;background-color:white;border-right:black solid 1px;", :align=>"center"}= link_to image_tag("bun2.gif", :style=>"border:0px;padding:5px;"), "http://www.mammon.ru"
      %td{:style=>"height:20px;"} &nbsp;
      -#%td{:colspan=>2, :style=>"height:20px;"} &nbsp;
 
