--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -1,4 +1,5 @@
-= link_to "Список продуктов", admin_products_path
-= link_to "Список разделов", admin_sections_path
-= link_to "Покупки", admin_purchases_path
-= link_to "Статьи", admin_articles_path
+=# link_to "Список продуктов", admin_products_path
+=# link_to "Список разделов", admin_sections_path
+=# link_to "Покупки", admin_purchases_path
+=# link_to "Статьи", admin_articles_path
+=# link_to "Скидки", admin_discounts_path
