--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -2,9 +2,15 @@
 %html
  %head
   %title
-   CupOfTea
+   CupOfTea-adm
   = stylesheet_link_tag :all
   = javascript_include_tag :defaults
   = csrf_meta_tag
  %body
-  = yield
+  = link_to "Список продуктов", admin_products_path
+  = link_to "Список разделов", admin_sections_path
+  = link_to "Покупки", admin_purchases_path
+  = link_to "Статьи", admin_articles_path
+  = link_to "Скидки", admin_discounts_path
+  .content
+   = yield
