--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -17,7 +17,7 @@
   %div{:style=>"padding-top:15px;color:red;"}
    - unless @product.in_store?
     %span{:style=>"float:right;color:#005826;"} Нет на складе
-   Цена #{@product.price} руб.
+   Цена #{@product.current_price(current_user)} руб.
   %div{:style=>":height:20px;clear: both;"}
   <script type="text/javascript">
   $(function() {
