--- a/app/views/user_notification/purchase_created.html.haml
+++ b/app/views/user_notification/purchase_created.html.haml
@@ -6,16 +6,23 @@
   %th Количество
   %th Цена 
   %td Стоимость
+ - dscnt = 0.0
+ - sum = 0.0
  - @purchase.cart_items.each do |cart|
   %tr
    %td #{cart.product.name}
    %td #{cart.amount}
-   %td #{cart.product.price}
-   %td #{cart.amount * cart.product.price}
+   - prc = cart.product.price
+   - cprc = cart.product.current_price(current_user)
+   %td #{cprc}
+   %td #{cart.amount * cprc}
+   dscnt += (prc * cart.amount) - (cprc * cart.amount)
+   sum += cprc * cart.amount
  %tr
-  %td{:colspan=>4} Ваша скидка составила: #{0} рублей
+  %td{:colspan=>4} Ваша скидка составила: #{dscnt} рублей
  %tr
-  %td{:colspan=>4} Итого к оплате: #{@purchase.cart_items.inject(0.0){|res, cart| res + (cart.amount * cart.product.price) } } рублей
+  %=#td{:colspan=>4} Итого к оплате: #{@purchase.cart_items.inject(0.0){|res, cart| res + (cart.amount * cart.product.price) } } рублей
+  %td{:colspan=>4} Итого к оплате: #{sum} } рублей
 %p Вы хотите узнать больше о наших скидках и акциях?
 -# Нажмите сюда (ведет ссылка на страницу с акциями)
 %p По любым вопросам, связанным с заказом, оплатой или доставкой, напишите нам на почту <a href="mailto:shop@cup-of.ru">shop@cup-of.ru</a>
