--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -1,10 +1,10 @@
 .breadcrumb
  = render :partial => 'main/breadcrumb', :locals=>{:from => @section}
- %div{:style=>"text-align:right;"}
-  = will_paginate(@products)
+.up_paginator
+ = will_paginate(@products)
 - @products.each do |p|
- %div{:style=>"width:160px;height:200px;float:left;"}
-  = link_to(image_tag(p.cover(:small), :style=>"padding: 10px;border:0px;"), product_path(p.id))
+ .product_image
+  = link_to(image_tag(p.cover(:small)), product_path(p.id))
   %div{:style=>"padding-left:10px;"}
    = form_tag cart_index_path, {:method=>:post, :remote=>true, :format=>'js'} do
     %div{:id=>"product_notice_#{p.id}"}
@@ -12,13 +12,13 @@
     %select{:id=>"ammount", :name=>"amount"}
      -(1..9).each do |i|
       %option{:value=>i.to_s} #{i.to_s}
-    = submit_tag "Купить", :style=>"padding:1px;font:18px bold verdana;color:#00a651;background:transparent;"
+    = submit_tag "Купить", :class=>"submit"
  %div
   %h3= link_to p.name, product_path(p.id)
   #{p.short_descr}
-  %div{:style=>"padding-top:15px;color:red;"}
+  %div{:style=>"padding-top:15px;"}
    - unless p.in_store?
-    %span{:style=>"float:right;color:#005826;"} Нет на складе
-  %div{:style=>"padding-top:15px;color:red;"} Цена #{p.current_price(current_user)} руб.
-  %div{:style=>":height:20px;clear: both;"}
+    %span.in_store Нет на складе
+  .price Цена #{p.current_price(current_user)} руб.
+  .product_delim{:class=>"clear"}
 = will_paginate(@products)
