--- a/app/views/main/_mordolenta.html.haml
+++ b/app/views/main/_mordolenta.html.haml
@@ -1,5 +1,5 @@
-.lenta{:style=>"width:636px;height:102px;vertical-align:center;margin-top:19px;margin-bottom:1px;margin-left:19px;margin-right:1px;"}
- .mordoitems{:style=>"width:600px;"}
+.lenta
+ .mordoitems
   %ul
    - m_items.each_with_index do |mord, i|
     %li.mordoitem{:style=>"display:#{i > 5 ? 'none' : 'inline-block' };width:100px;height:100px;"}= link_to image_tag(mord.cover(:mord), :style=>"padding:2px;border:0px none;", :alt=>mord.name, :title=>mord.name), product_path(mord.id), :style=>"border:0px;border-style:none;"
