--- a/public/stylesheets/sass/imp.sass
+++ b/public/stylesheets/sass/imp.sass
@@ -127,41 +127,49 @@ div.lenta
 
 div.mordolenta
  width: 600px
+ height: 100px
+ margin: 10px
 
 li.mordoitem
  width: 100px
  height: 100px
 
-li.morditem > a
+div.mordoitems
+ //border: 1px black solid
+ width: 600px
+ padding: 2px
+
+li.mordoitem > a
  padding: 2px
  border: 0px none
 
-li.morditem > a > img
+li.mordoitem > a > img
  border: 0px
  border-style: none
 
 .mtop 
- background: url(dot.gif) 0 0 repeat-x
- width: 20em
+ background: transparent url('/images/dot.gif') 0 9px repeat-x
+ //background-color: white
+ //width: 20em
 
 .mbottom
- background: url(dot.gif) 0 100% repeat-x
+ background: url('/images/dot.gif') 0 110px repeat-x
 
 .mleft 
- background: url(dot.gif) 0 0 repeat-y
+ background: url('/images/dot.gif') 9px 0 repeat-y
 
 .mright
- background: url(dot.gif) 100% 0 repeat-y
+ background: url('/images/dot.gif') 651px 0 repeat-y
 
 .mbl
- background: url(bl.gif) 0 100% no-repeat
+ //background: url(bl.gif) 0 100% no-repeat
 
 .mbr
- background: url(br.gif) 100% 100% no-repeat
+ //background: url(br.gif) 100% 100% no-repeat
 
 .mtl
- background: url(tl.gif) 0 0 no-repeat
+ //background: url(tl.gif) 0 0 no-repeat
 
 .mtr
- background: url(tr.gif) 100% 0 no-repeat
+ //background: url(tr.gif) 100% 0 no-repeat
  padding: 10px
