--- a/app/views/admin/articles/index.html.haml
+++ b/app/views/admin/articles/index.html.haml
@@ -8,7 +8,8 @@
   %th on main
   %th date
  - @articles.each do |article|
-  %tr
+  = render_cell :article, :row, :article => article
+  -# %tr
    %td= link_to article.id.to_s, edit_admin_article_path(article.id)
    %td= article.name
    %td= article.body.split(" ")[0, 30].join " "
