--- a/app/views/admin/articles/new.html.haml
+++ b/app/views/admin/articles/new.html.haml
@@ -1,3 +1,3 @@
-= form_for @article, :url=>admin_articles_path, :html=>{:multipart=>true} do |f|
+-# = form_for @article, :url=>admin_articles_path, :html=>{:multipart=>true} do |f|
  = render :partial=>'article_form', :locals=>{:f=>f}
-
+= render_cell :article, :form, :article => Article.new, :url => admin_articles_path, :method => :post
