--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,4 +1,5 @@
-= render :partial=>'articles/article_on_main', :locals=>{:article_on_main=>@article}
+= render_cell :article, :display_on_main
+- #= render :partial=>'articles/article_on_main', :locals=>{:article_on_main=>@article}
 %p{:style=>"font-weight:bold;"} Именно это волшебство теперь доступно каждому...
 %p Пузырьки пара с шумом поднимаются в закипающей воде... Немножко заварки, потом еще чуть-чуть... Тепло обволакивает каждую чаинку, а затем...
 %p А затем начинается удивительное таинство... Волшебное рождение  <a class="semibold" href="/sections/1">ЧАЯ</a>...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий <a class="semibold" href="/sections/3">аромат</a>? Есть ровно 5 минут, чтоб достать красивые фарфоровые <a class="semibold" href="/sections/70">чашки</a> и приготовиться к <a class="semibold" href="/sections/66">чаепитию</a>.
