--- a/public/stylesheets/sass/imp.sass
+++ b/public/stylesheets/sass/imp.sass
@@ -117,7 +117,8 @@ div.ad_up img
  border: 0px none
 
 div.lenta
- width: 636px
+ width: 626px
+ //width: 636px
  height: 102px
  vertical-align: center
  margin-top: 19px
@@ -159,7 +160,7 @@ li.mordoitem > a > img
  background: url('/images/dot.gif') 9px 0 repeat-y
 
 .mright
- background: url('/images/dot.gif') 651px 0 repeat-y
+ background: url('/images/dot.gif') 641px 0 repeat-y
 
 .mbl
  //background: url(bl.gif) 0 100% no-repeat
@@ -173,3 +174,7 @@ li.mordoitem > a > img
 .mtr
  //background: url(tr.gif) 100% 0 no-repeat
  padding: 10px
+
+.article .right
+ font: verdana 10px
+ width: 120px
