--- a/public/stylesheets/imp.css
+++ b/public/stylesheets/imp.css
@@ -114,7 +114,7 @@ div.ad_up img {
   border: 0px none; }
 
 div.lenta {
-  width: 636px;
+  width: 626px;
   height: 102px;
   vertical-align: center;
   margin-top: 19px;
@@ -153,7 +153,11 @@ li.mordoitem > a > img {
   background: url("/images/dot.gif") 9px 0 repeat-y; }
 
 .mright {
-  background: url("/images/dot.gif") 651px 0 repeat-y; }
+  background: url("/images/dot.gif") 641px 0 repeat-y; }
 
 .mtr {
   padding: 10px; }
+
+.article .right {
+  font: verdana 10px;
+  width: 120px; }
