--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -4,7 +4,7 @@
 %p Пузырьки пара с шумом поднимаются в закипающей воде... Немножко заварки, потом еще чуть-чуть... Тепло обволакивает каждую чаинку, а затем...
 %p А затем начинается удивительное таинство... Волшебное рождение  <a class="semibold" href="/sections/1">ЧАЯ</a>...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий <a class="semibold" href="/sections/3">аромат</a>? Есть ровно 5 минут, чтоб достать красивые фарфоровые <a class="semibold" href="/sections/70">чашки</a> и приготовиться к <a class="semibold" href="/sections/66">чаепитию</a>.
 %p Сегодня это <a class="semibold" href="/sections/20">пуэр</a>. Завтра утром будет <a class="semibold" href="/sections/19">жасминовый чай</a>... Или же тонизирующий <a class="semibold" href="/sections/18">красный</a>... А может, это будет <a class="semibold" href="/sections/21">молочный улун</a>?  Вы хотите чего-то другого? Ищете <a class="semibold" href="/sections/61">отличный подарок</a>? Вам сюда, выбирайте СВОЙ ЧАЙ. 
-%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь <a class="semibold" href=="/sections/14">баночку хорошего чая</a>.
+%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь <a class="semibold" href="/sections/14">баночку хорошего чая</a>.
 %p В нашем магазине вы всегда сможете купить полюбившийся вам <a class="semibold" href="/sections/7">напиток</a>. Выбирайте неспеша свой чай: 
 %ul
  %li Для хорошего самочувствия
